...
    },
  });

  return (
    <TouchableOpacity
      style={styles.button}
      testID="timer.dice"
      accessible
      accessibilityRole="button"
      accessibilityLabel={t('accessibility.distraction')}
      activeOpacity={0.7}
      onPress={() => {
        analytics.trackDiceRolled();
...
